Fix issues with inconsistent form field spacing; refactor button styling

--- a/css/bhcc_webform_date.css
+++ b/css/bhcc_webform_date.css
@@ -3,10 +3,6 @@
  * Webform example composite styles.
  */
 
-.bhcc-webform-date--wrapper .fieldset-wrapper {
-  margin-bottom: 20px;
-}
-
 .bhcc-webform-date--wrapper .fieldset-wrapper > .form-item {
   display: inline-block;
   margin-right: 5px;
